# robot_incendios_ws

./: .gitignore  frames_2026-05-07_15.18.16.gv  frames_2026-05-07_15.20.46.gv  frames_2026-05-07_16.11.30.gv  mlx_full.py  test_frames.py
arduino/: robot_principal.ino
install/: local_setup.sh  setup.sh
install/action_package/lib/action_package/: action  adv_action  adv_client  client
install/action_package/share/action_package/: package.dsv  package.ps1  package.sh  package.xml
install/diff_drive_sim/lib/diff_drive_sim/: ekf_node  obstacle_avoider  odometry_publisher  robot_driver
install/diff_drive_sim/share/diff_drive_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/diff_drive_sim_gazebo/share/diff_drive_sim_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
scr/robot_incendios/: package.xml  setup.cfg  setup.py
scr/simulacion_ri/: CMakeLists.txt  setup.py
scr/simulacion_ri/config/: mapper_params_online_async.yaml  robot.rviz  slam_toolbox_params.yaml
scr/simulacion_ri/install/: local_setup.sh  setup.sh
scr/simulacion_ri/launch/: display.launch.py  rpi.launch.py
scr/simulacion_ri/log/: latest_build
scr/simulacion_ri/meshes/: rueda_delante_izquierda_link.STL  rueda_trasera_izquierda_link.STL
scr/simulacion_ri/simulacion_ri/: arduino_node.py  camera_node.py  diagnostics_node.py  fire_detector_node.py  thermal_node.py
scr/simulacion_ri/urdf/: Ensamblaje_URDF_Final.urdf
scr/simulacion_ri/worlds/: mundo_prueba.sdf
(+269 files in other folders)
